# Quadruped_DRL

./: .clang-format  .gitignore  LICENSE  README.md
go2_description/: CMakeLists.txt  package.xml
go2_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro
quadruped_agent/: CMakeLists.txt  package.xml
quadruped_agent/include/quadruped_agent/: AgentController.hpp  ObservationCollector.hpp
quadruped_agent/launch/: quadruped_agent.launch.py
quadruped_agent/quadruped_agent/: agent_model.py
quadruped_agent/scripts/: agent_node.py
quadruped_agent/src/: AgentController.cpp  ObservationCollector.cpp
quadruped_bringup/: CMakeLists.txt  package.xml
quadruped_bringup/launch/: quadruped_bringup.launch.py
quadruped_control/: CMakeLists.txt  package.xml
quadruped_control/config/: go2_controller.yaml  go2_standing_pose.yaml
quadruped_control/launch/: quadruped_control.launch.py
quadruped_control/src/: standing_pose_server.cpp
quadruped_control/urdf/: go2.ros2_control.xacro
quadruped_estimator/: CMakeLists.txt  package.xml
quadruped_estimator/include/quadruped_estimator/: VelocityEstimator.hpp
quadruped_estimator/src/: VelocityEstimator.cpp
quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_gazebo/config/: gz_bridge.yaml
quadruped_gazebo/launch/: quadruped_sim.launch.py
quadruped_gazebo/plugin/foot_sensor/: CMakeLists.txt  FootSensorSystem.cc  FootSensorSystem.hh
quadruped_interfaces/: CMakeLists.txt  package.xml
quadruped_interfaces/msg/: BaseObservation.msg  CommandObservation.msg  FeetObservation.msg  FullObservation.msg  JointsAction.msg  JointsObservation.msg
quadruped_isaac/: CMakeLists.txt  package.xml
quadruped_isaac/launch/: quadruped_sim.launch.py
quadruped_isaac/scripts/: quadruped_simulation_node.py  run_isaacsim.py
quadruped_isaac/scripts/standalone/: quadruped_simulation.py
